# nxt-standalone

./: .gitmodules  CMakeLists.txt  README.md  next.json  parse.py
examples/: Animometer.cpp  BackendBinding.h  CMakeLists.txt  ComputeBoids.cpp  HelloCompute.cpp  HelloIndices.cpp  HelloInstancing.cpp  HelloTriangle.c  HelloTriangle.cpp  HelloUBO.cpp  HelloVertices.cpp  MetalBinding.mm  SpirvTest.cpp  Utils.cpp  Utils.h
examples/glTFViewer/: CMakeLists.txt  Camera.inl  glTFViewer.cpp
generator/: CMakeLists.txt  main.py
generator/templates/: BackendProcTable.cpp  api.c  api.h  apicpp.cpp  apicpp.h  mock_api.cpp  mock_api.h  wire.cpp
generator/templates/blink/: Forward.h  Object.h  Object.idl  Objects.cpp  api.idl  autogen.gni
src/backend/: CMakeLists.txt
src/backend/common/: BindGroup.cpp  BindGroup.h  BindGroupLayout.cpp  BindGroupLayout.h  BitSetIterator.h  Buffer.cpp  Buffer.h  CommandAllocator.cpp  CommandAllocator.h  CommandBuffer.cpp  CommandBuffer.h  Commands.h  Device.cpp  Device.h  Forward.h  InputState.cpp  InputState.h  Math.cpp  Math.h  PerStage.cpp  PerStage.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  Queue.cpp  Queue.h  RefCounted.cpp  RefCounted.h  Sampler.cpp  Sampler.h  ShaderModule.cpp  ShaderModule.h  Texture.cpp  Texture.h  ToBackend.h
src/backend/metal/: GeneratedCodeIncludes.h  MetalBackend.h  MetalBackend.mm
src/backend/opengl/: CommandBufferGL.cpp  CommandBufferGL.h  GeneratedCodeIncludes.h  OpenGLBackend.cpp  OpenGLBackend.h  PipelineGL.cpp  PipelineGL.h  PipelineLayoutGL.cpp  PipelineLayoutGL.h  SamplerGL.cpp  SamplerGL.h  ShaderModuleGL.cpp  ShaderModuleGL.h  TextureGL.cpp  TextureGL.h
src/backend/tests/: BitSetIteratorTests.cpp  CommandAllocatorTests.cpp  MathTests.cpp  PerStageTests.cpp  RefCountedTests.cpp  ToBackendTests.cpp
src/include/nxt/: EnumClassBitmasks.h
src/tests/: CMakeLists.txt  EnumClassBitmasksTests.cpp
src/wire/: CMakeLists.txt  TerribleCommandBuffer.h  Wire.h
src/wire/tests/: UnittestsMain.cpp  WireTests.cpp
