//* Copyright (c) 2017 The Chromium Authors. All rights reserved.
//* Use of this source code is governed by a BSD-style license that can be
//* found in the LICENSE file.

autogen_nxt_sources = [
    "gen/NXT.cpp",
    "gen/Forward.h",
    {% for type in by_category["object"] %}
        "gen/NXT{{type.name.CamelCase()}}.h",
    {% endfor %}
]

autogen_nxt_idl = [
    {% for type in by_category["object"] %}
        "nxt/gen/NXT{{type.name.CamelCase()}}.idl",
    {% endfor %}
]
